<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corner_bar"
    android:elevation="10dp">

    <TextView
        android:id="@+id/confirmation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/item_note_background_color"
        android:gravity="center_horizontal"
        android:text="@string/confirmation_dialog_message"
        android:textColor="@color/note_text_color"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:elevation="5dp"
        android:text="@string/confirmation_dialog_cancel_button_text"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/confirm_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmation_text" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:elevation="5dp"
        android:text="@string/confirmation_dialog_confirm_button_text"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@id/cancel_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmation_text" />

</androidx.constraintlayout.widget.ConstraintLayout>